--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,157 @@
-name: mlProject
+name: base
 channels:
   - defaults
-prefix: C:\Users\apoor\miniconda3\envs\mlProject
+dependencies:
+  - brotlipy=0.7.0=py39h2bbff1b_1003
+  - ca-certificates=2021.7.5=haa95532_1
+  - certifi=2021.5.30=py39haa95532_0
+  - cffi=1.14.6=py39h2bbff1b_0
+  - chardet=4.0.0=py39haa95532_1003
+  - conda=4.10.3=py39haa95532_0
+  - conda-package-handling=1.7.3=py39h8cc25b3_1
+  - console_shortcut=0.1.1=4
+  - cryptography=3.4.7=py39h71e12ea_0
+  - idna=2.10=pyhd3eb1b0_0
+  - menuinst=1.4.16=py39h2bbff1b_0
+  - openssl=1.1.1k=h2bbff1b_0
+  - pip=21.1.3=py39haa95532_0
+  - powershell_shortcut=0.0.1=3
+  - pycosat=0.6.3=py39h2bbff1b_0
+  - pycparser=2.20=py_2
+  - pyopenssl=20.0.1=pyhd3eb1b0_1
+  - pysocks=1.7.1=py39haa95532_0
+  - python=3.9.5=h6244533_3
+  - pywin32=228=py39he774522_0
+  - requests=2.25.1=pyhd3eb1b0_0
+  - ruamel_yaml=0.15.100=py39h2bbff1b_0
+  - setuptools=52.0.0=py39haa95532_0
+  - six=1.16.0=pyhd3eb1b0_0
+  - sqlite=3.36.0=h2bbff1b_0
+  - tqdm=4.61.2=pyhd3eb1b0_1
+  - urllib3=1.26.6=pyhd3eb1b0_1
+  - vc=14.2=h21ff451_1
+  - vs2015_runtime=14.27.29016=h5e58377_2
+  - wheel=0.36.2=pyhd3eb1b0_0
+  - win_inet_pton=1.1.0=py39haa95532_0
+  - wincertstore=0.2=py39h2bbff1b_0
+  - yaml=0.2.5=he774522_0
+  - pip:
+    - absl-py==1.0.0
+    - altair==4.1.0
+    - argon2-cffi==21.3.0
+    - argon2-cffi-bindings==21.2.0
+    - astor==0.8.1
+    - astunparse==1.6.3
+    - attrs==21.2.0
+    - backcall==0.2.0
+    - base58==2.1.1
+    - bleach==4.1.0
+    - blinker==1.4
+    - cachetools==4.2.4
+    - click==7.1.2
+    - colorama==0.4.4
+    - debugpy==1.5.1
+    - decorator==5.1.0
+    - defusedxml==0.7.1
+    - entrypoints==0.3
+    - filelock==3.4.0
+    - fire==0.4.0
+    - flatbuffers==2.0
+    - gast==0.4.0
+    - gitdb==4.0.9
+    - gitpython==3.1.24
+    - google-auth==2.3.3
+    - google-auth-oauthlib==0.4.6
+    - google-pasta==0.2.0
+    - grpcio==1.43.0
+    - h5py==3.6.0
+    - huggingface-hub==0.2.1
+    - importlib-metadata==4.10.0
+    - ipykernel==6.6.0
+    - ipython==7.30.1
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.6.5
+    - jedi==0.18.1
+    - jinja2==3.0.3
+    - joblib==1.1.0
+    - jsonschema==4.3.2
+    - jupyter-client==7.1.0
+    - jupyter-core==4.9.1
+    - jupyterlab-pygments==0.1.2
+    - jupyterlab-widgets==1.0.2
+    - keras==2.7.0
+    - keras-preprocessing==1.1.2
+    - keras2onnx==1.7.0
+    - libclang==12.0.0
+    - markdown==3.3.6
+    - markupsafe==2.0.1
+    - matplotlib-inline==0.1.3
+    - mistune==0.8.4
+    - nbclient==0.5.9
+    - nbconvert==6.3.0
+    - nbformat==5.1.3
+    - nest-asyncio==1.5.4
+    - notebook==6.4.6
+    - numpy==1.21.5
+    - oauthlib==3.1.1
+    - onnx==1.10.2
+    - onnxconverter-common==1.9.0
+    - opt-einsum==3.3.0
+    - packaging==21.3
+    - pandas==1.3.5
+    - pandocfilters==1.5.0
+    - parso==0.8.3
+    - pickleshare==0.7.5
+    - pillow==8.4.0
+    - prometheus-client==0.12.0
+    - prompt-toolkit==3.0.24
+    - protobuf==3.19.1
+    - pyarrow==6.0.1
+    - pyasn1==0.4.8
+    - pyasn1-modules==0.2.8
+    - pydeck==0.7.1
+    - pygments==2.10.0
+    - pympler==1.0.1
+    - pyparsing==3.0.6
+    - pyrsistent==0.18.0
+    - python-dateutil==2.8.2
+    - pytz==2021.3
+    - pytz-deprecation-shim==0.1.0.post0
+    - pywinpty==1.1.6
+    - pyyaml==6.0
+    - pyzmq==22.3.0
+    - regex==2021.11.10
+    - requests-oauthlib==1.3.0
+    - rsa==4.8
+    - sacremoses==0.0.46
+    - send2trash==1.8.0
+    - smmap==5.0.0
+    - streamlit==1.3.0
+    - tensorboard==2.7.0
+    - tensorboard-data-server==0.6.1
+    - tensorboard-plugin-wit==1.8.0
+    - tensorflow==2.7.0
+    - tensorflow-cpu==2.7.0
+    - tensorflow-estimator==2.7.0
+    - tensorflow-io-gcs-filesystem==0.23.1
+    - termcolor==1.1.0
+    - terminado==0.12.1
+    - testpath==0.5.0
+    - tokenizers==0.10.3
+    - toml==0.10.2
+    - toolz==0.11.2
+    - tornado==6.1
+    - traitlets==5.1.1
+    - transformers==4.15.0
+    - typing-extensions==4.0.1
+    - tzdata==2021.5
+    - tzlocal==4.1
+    - validators==0.18.2
+    - watchdog==2.1.6
+    - wcwidth==0.2.5
+    - webencodings==0.5.1
+    - werkzeug==2.0.2
+    - widgetsnbextension==3.5.2
+    - wrapt==1.13.3
+    - zipp==3.6.0
+prefix: C:\Users\apoor\miniconda3
